Locale routes working.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title ProjectManager
     = render :partial => "shared/includes"
+    = render :partial => "shared/locale_links"
   %body
     %p#notice= notice
     = yield
