Location for Project now added via seeds.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %title ProjectManager
-    = render :partial => "shared/includes"
-    = render :partial => "shared/locale_links"
+    = render :partial => 'shared/includes'
+    = render :partial => 'shared/locale_links'
   %body
     %p#notice= notice
     = yield
