--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,11 @@
 !!!
-%html
+%html{:lang => I18n.locale.to_s}
   %head
+    %meta{:charset => 'utf-8'}
     %title ProjectManager
     = render :partial => 'shared/includes'
     = render :partial => 'shared/locale_links'
+    = yield :head
   %body
     %p#notice= notice
     = yield
