--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -74,6 +74,11 @@
   %b End date:
   = @project.end_date
 
+%h2 Recent Events
+= render :partial => 'events/event', :collection => @project.events
+
 = link_to 'Edit', edit_project_path(@project)
 \|
 = link_to 'Back', projects_path
+\|
+= link_to 'Events', project_events_path(@project)
