--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,62 +1,33 @@
 - content_for :head do
-  = stylesheet_link_tag 'polymaps', 'ui-lightness/jquery-ui'
-  = javascript_include_tag 'polymaps.min', 'jquery-ui.min'
+  = stylesheet_link_tag 'google'
+  = javascript_include_tag 'GeoJSON'
   :javascript
-    var po = org.polymaps;
-    $(function() {
-    var pathname = window.location.pathname;
-
-    var map = po.map()
-      .container(document.getElementById("map").appendChild(po.svg("svg")))
-      .center({lat: 30.375, lon: 69.345})
-      .zoom(5)
-      .add(po.interact())
-      .add(po.hash());
-
-    map.add(po.image()
-      .url(po.url("http://{S}tile.cloudmade.com"
-      + "/1a1b06b230af4efdbb989ea99e9841af" // http://cloudmade.com/register
-      + "/998/256/{Z}/{X}/{Y}.png")
-      .hosts(["a.", "b.", "c.", ""])));
-
-    map.add(po.compass()
-      .pan("none"));
-
-    map.add(po.geoJson()
-      .url(pathname+'.json')
-      .id("province")
-      .on('load', setupPopup));
-    });
-
-    function setupPopup (e) {
-      $.each(e.features, function () {
-        addDialogue(this);
-      })
+    function initialize() {
+      var pathname = window.location.pathname;
+      var myLatlng = new google.maps.LatLng(30.375, 69.345);
+      var myOptions = {
+        zoom: 6,
+        center: myLatlng,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      }
+      var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+      
+      $.get(pathname+'.json', function(geojson) {
+        province = new GeoJSON(geojson, null);
+        province.setMap(map);
+      });
     }
 
-    function addDialogue (feature) {
-      var element = feature.element;
-      var props = "My Province";           // feature.data.properties;
-      var markerUrl =  '/images/rails.png'; // props.marker;
-      var markerimage = po.svg("image");
-      markerimage.setAttribute("xlink:href", markerUrl);
-      markerimage.setAttribute("transform", element.getAttribute("transform"));
-      element.parentNode.appendChild(markerimage);
-
-      var qe = $(element);
-      // element.setAttribute("class", "dialog");
-      console.log("data %o", feature.data);
-
-      var title =  "My province"; // props.tags.join(", ");
-      // var newNode = $("<div><img src=\"" + markerUrl + "\"/>" +  props.description + "</div>");
-      var newNode = $("<div><img src=\"" + markerUrl + "\"/>My province is so pretty ... </div>");
-      $("body").append(newNode);
-
-      newNode.dialog({ autoOpen: false, title: title })
-      qe.click(function() {newNode.dialog('open')});
+    function loadScript() {
+      var script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src = "http://maps.google.com/maps/api/js?sensor=false&callback=initialize";
+      document.body.appendChild(script);
     }
 
-#map
+    window.onload = loadScript;
+
+#map_canvas
 
 %p
   %b Title:
