--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,6 +1,6 @@
 - content_for :head do
   = stylesheet_link_tag 'google'
-  = javascript_include_tag 'GeoJSON'
+  = javascript_include_tag 'GeoJSON', 'json2', 'json-helpers'
   :javascript
     function initialize() {
       var pathname = window.location.pathname;
@@ -8,20 +8,25 @@
       var myOptions = {
         zoom: 6,
         center: myLatlng,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
+        mapTypeId: google.maps.MapTypeId.TERRAIN
       }
       var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-      
-      $.get(pathname+'.json', function(geojson) {
+
+      $.getJSON(pathname+'.json', function(geojson) {
         province = new GeoJSON(geojson, null);
         province.setMap(map);
       });
-      
-      $.get(pathname+'/events.json', function(geojson) {
-        for (var i=0;i<geojson.geometries.length;i++){
-          event = new GeoJSON(geojson.geometries[i], null);
-          event.setMap(map);
-        }
+
+      $.getJSON(pathname+'/events.json', function(geojson) {
+        $.each(geojson.features, function(i, feature) {
+          var event_marker = new GeoJSON(feature.geometry, null);
+          event_marker.setMap(map);
+          var content_string = renderJSON(feature);
+          var info_window = new google.maps.InfoWindow({content: content_string});
+          google.maps.event.addListener(event_marker, 'click', function() {
+            info_window.open(map, event_marker);
+          });
+        })
       });
     }
 
