Fixed page loading and map.

--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -4,12 +4,7 @@
     %meta{:charset => "UTF-8"}
     = render :partial => 'shared/includes'
     = yield :head
-  
+
   %body
-    %page{data: {role: 'page'}}
-      %header{data: {role: 'header'}}
-        = yield :header
-      %content{data: {role: 'content'}}
-        = yield :content
-      %footer{data: {role: 'footer'}}
-        = yield :footer
+    %div{data: {role: 'page'}, style:  "width:100%; height:100%"}
+      = yield
