New project working.

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -48,8 +48,8 @@
   %b Description:
   = @project.description
 %p
-  %b Admin:
-  = @project.admin_id
+  %b Location:
+  = @project.location.name
 %p
   %b Start date:
   = @project.start_date
