--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,12 @@
 %html{:lang => I18n.locale.to_s}
   %head
     %meta{:charset => 'utf-8'}
-    %title ProjectManager
+    %title Project
     = render :partial => 'shared/includes'
     = render :partial => 'shared/locale_links'
     = yield :head
   %body
+    #header
+      = yield :header
     %p#notice= notice
     = yield
