--- a/app/views/shared/_includes.mobile.haml
+++ b/app/views/shared/_includes.mobile.haml
@@ -1,3 +1,12 @@
 = stylesheet_link_tag 'jquery.mobile.min'
-= javascript_include_tag :defaults, 'jquery.mobile.min'
+= javascript_include_tag :defaults
+
+:javascript
+  $(document).bind("mobileinit", function(){
+    $.extend(  $.mobile , {
+      ajaxFormsEnabled : false
+    });
+  });
+
+= javascript_include_tag 'jquery.mobile.min'
 = csrf_meta_tag
