--- a/app/views/projects/edit.mobile.haml
+++ b/app/views/projects/edit.mobile.haml
@@ -1,12 +1,12 @@
 %div{ 'data-role' => 'header', 'data-position' => 'fixed' }
-  =link_to "Cancel", projects_path, :rel => 'external', 'data-icon' => 'delete'
-  %h1 New project
+  = link_to 'Back', projects_path, :rel => 'external', 'data-icon' => 'delete'
+  %h1 Editing project
   = link_to 'Save', '#', :rel => 'external', 'data-icon' => 'check', :id => 'save_button'
-
+  
 %div{ 'data-role' => 'content' }
-  =render 'form'
+  = render 'form'
 
   :javascript
     $('#save_button').bind('click', function() {
-      $('form.new_project').submit();
+      $('form.edit_project').submit();
     });
