--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -6,5 +6,5 @@
     = yield :head
 
   %body
-    %div{data: {role: 'page'}, style:  "width:100%; height:100%"}
+    %div{"data-role" => 'page', :style => "width:100%; height:100%"}
       = yield
