--- a/app/views/projects/show.mobile.haml
+++ b/app/views/projects/show.mobile.haml
@@ -60,5 +60,5 @@
   =link_to "Projects", projects_path, :rel => "external", "data-icon" => "arrow-l"
   %h1= @project.title
 
-#content{"data-role" => "content", style: "height:100%"}
+#content{"data-role" => "content", :style => "height:100%"}
   #map_canvas{style: "width:100%; height:100%"}
