--- a/app/views/projects/show.mobile.haml
+++ b/app/views/projects/show.mobile.haml
@@ -61,4 +61,4 @@
   %h1= @project.title
 
 #content{"data-role" => "content", :style => "height:100%"}
-  #map_canvas{style: "width:100%; height:100%"}
+  #map_canvas{:style => "width:100%; height:100%"}
