--- a/app/views/shared/_includes.mobile.haml
+++ b/app/views/shared/_includes.mobile.haml
@@ -1,4 +1,4 @@
-= stylesheet_link_tag 'jquery.mobile.min'
+= stylesheet_link_tag 'http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css'
 = javascript_include_tag :defaults
 
 :javascript
@@ -8,5 +8,5 @@
     });
   });
 
-= javascript_include_tag 'jquery.mobile.min'
+= javascript_include_tag 'http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js'
 = csrf_meta_tag
