--- a/app/views/shared/_includes.html.haml
+++ b/app/views/shared/_includes.html.haml
@@ -1,3 +1,43 @@
 = stylesheet_link_tag 'application', 'scaffold'
 = javascript_include_tag :defaults
+/ socket-io TODO: move to jammit vendor
+= javascript_include_tag "vendor/web-socket-js/swfobject", "vendor/web-socket-js/FABridge", "vendor/web-socket-js/web_socket"
+
+:javascript
+  // Set URL of your WebSocketMain.swf here:
+  WEB_SOCKET_SWF_LOCATION = "vendor/web-socket-js/WebSocketMain.swf";
+  // Set this to dump debug message from Flash to console.log:
+  WEB_SOCKET_DEBUG = true;
+
+  // Everything below is the same as using standard WebSocket.
+
+  var ws;
+
+  function initWebsocket() {
+
+    // Connect to Web Socket.
+    // Change host/port here to your own Web Socket server.
+    ws = new WebSocket("ws://#{Websocket_config[:socket_host]}:#{Websocket_config[:socket_port]}/");
+
+    // Set event handlers.
+    ws.onopen = function() {
+      console.log("onopen");
+    };
+    ws.onmessage = function(e) {
+      // e.data contains received string.
+      console.log("onmessage: " + e.data);
+    };
+    ws.onclose = function() {
+      console.log("onclose");
+    };
+    ws.onerror = function() {
+      console.log("onerror");
+    };
+
+  }
+
+  $(document).ready(function() {
+    initWebsocket();
+  });
+
 = csrf_meta_tag
