--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @event do |f|
+= form_for @event , :url => project_events_path(@project) do |f|
   -if @event.errors.any?
     #error_explanation
       %h2= "#{pluralize(@event.errors.count, "error")} prohibited this event from being saved:"
@@ -13,10 +13,11 @@
     = f.label :description
     = f.text_area :description
   .field
-    = f.label :geom
     = f.text_field :geom
   .field
-    = f.label :project_id
-    = f.text_field :project_id
+    = f.label :address
+    = f.text_field :address
+    %span.geocoding_status Address unvarified
+    =link_to "Geocode this address", nil, :class => 'geocode_address'
   .actions
     = f.submit 'Save'
