--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -39,7 +39,12 @@
 
     window.onload = loadScript;
 
+
+%h3
+  =link_to "New event", new_project_event_path(@project)
+
 #map_canvas
+
 
 %p
   %b Title:
