--- a/app/views/events/_form.mobile.haml
+++ b/app/views/events/_form.mobile.haml
@@ -13,7 +13,7 @@
     = f.label :description
     = f.text_area :description
   .field
-    = f.text_field :geom
+    = f.hidden_field :geom
   .field
     = f.label :address
     = f.text_field :address
