--- a/app/views/events/new.mobile.haml
+++ b/app/views/events/new.mobile.haml
@@ -4,7 +4,7 @@
 
 :javascript
   $(document).ready(function () {
-    var lat, lon = 0;
+    var lat, lon, elev = 0;
     var map = null;
     var marker = null;
 
@@ -13,9 +13,15 @@
         if( pos.coords ){
           lat = pos.coords.latitude;
           lon = pos.coords.longitude;
+          if( pos.coords.altitude != null){
+            elev = pos.coords.altitude;
+          }
         } else{
           lat = pos.latitude;
           lon = pos.longitude;
+          if( pos.altitude != null){
+            elev = pos.altitude;
+          }
         }
 
         event = new google.maps.LatLng(lat, lon);
@@ -27,7 +33,7 @@
           animation: google.maps.Animation.DROP,
           position: event
         });
-        $('input#event_geom').val("POINT("+lon +" "+lat+")");
+        $('input#event_geom').val("POINT("+lon +" "+lat+" "+elev+")");
         // console.log("Location Found: lat="+lat + " lon="+lon );
       }
       function gpsFail () {
@@ -52,7 +58,7 @@
           lon = results[0].geometry.location.lng()
           lat = results[0].geometry.location.lat()
           // set the hidden geom field to wkt_geometry string
-          $('input#event_geom').val("POINT("+lon +" "+lat+")");
+          $('input#event_geom').val("POINT("+lon +" "+lat+" "+elev+")");
           // set address varified
           $('span.geocoding_status').html("Address verified");
           // center map to address and drop marker
@@ -85,7 +91,7 @@
   })  // document read
 
 %div{ 'data-role' => 'header', 'data-position' => 'fixed' }
-  =link_to "Cancel", project_events_path(@project), :rel => 'external', 'data-icon' => 'delete'
+  =link_to "Cancel", project_path(@project), :rel => 'external', 'data-icon' => 'delete'
   %h1 New Event
   = link_to 'Save', '#', :rel => 'external', 'data-icon' => 'check', :id => 'save_button'
 
