minor fixes to googlemap js.

--- a/app/views/shared/_includes.html.haml
+++ b/app/views/shared/_includes.html.haml
@@ -25,7 +25,7 @@
     };
     ws.onmessage = function(e) {
       // e.data contains received string.
-      console.log("onmessage: " + e.data);
+      console.log(e.data);
     };
     ws.onclose = function() {
       console.log("onclose");
