--- a/app/views/shared/_includes.html.haml
+++ b/app/views/shared/_includes.html.haml
@@ -23,10 +23,10 @@
     ws.onopen = function() {
       console.log("onopen");
     };
-    ws.onmessage = function(e) {
-      // e.data contains received string.
-      console.log(e.data);
-    };
+    // ws.onmessage = function(e) {
+    //   // e.data contains received string.
+    //   console.log("onmessage");
+    // };
     ws.onclose = function() {
       console.log("onclose");
     };
