--- a/app/views/shared/_includes.mobile.haml
+++ b/app/views/shared/_includes.mobile.haml
@@ -8,5 +8,43 @@
     });
   });
 
+/ TODO: this is shared with web interface
+:javascript
+  // Set URL of your WebSocketMain.swf here:
+  WEB_SOCKET_SWF_LOCATION = "vendor/web-socket-js/WebSocketMain.swf";
+  // Set this to dump debug message from Flash to console.log:
+  WEB_SOCKET_DEBUG = true;
+
+  // Everything below is the same as using standard WebSocket.
+
+  var ws;
+
+  function initWebsocket() {
+
+    // Connect to Web Socket.
+    // Change host/port here to your own Web Socket server.
+    ws = new WebSocket("ws://#{WebsocketConfig[:socket_host]}:#{WebsocketConfig[:socket_port]}/");
+
+    // Set event handlers.
+    ws.onopen = function() {
+      console.log("onopen");
+    };
+    // ws.onmessage = function(e) {
+    //   // e.data contains received string.
+    //   console.log("onmessage");
+    // };
+    ws.onclose = function() {
+      console.log("onclose");
+    };
+    ws.onerror = function() {
+      console.log("onerror");
+    };
+
+  }
+
+  $(document).ready(function() {
+    initWebsocket();
+  });
+
 = javascript_include_tag 'http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js'
 = csrf_meta_tag
