--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,5 +1,6 @@
 %header
   %p= t :projects
 
-.button= link_to "Add Project", new_project_path
+.addlink= link_to "Create a New Project", new_project_path
+
 = render @projects
