--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @event
+= link_to 'Show', project_event_path(@project, @event)
 \|
-= link_to 'Back', events_path
+= link_to 'Back', project_events_path(@project)
