--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,6 +1,6 @@
 - content_for :head do
   = stylesheet_link_tag 'google'
-  = javascript_include_tag 'GeoJSON', 'json-helpers'
+  = javascript_include_tag 'vendor/GeoJSON', 'json-helpers'
   :javascript
     var map;
 
