--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -1,5 +1,5 @@
 =content_for :head do
-  =stylesheet_link_tag 'google'
+  =stylesheet_link_tag 'map'
   =javascript_include_tag 'http://maps.google.com/maps/api/js?sensor=false'
 
 :javascript
