--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,5 +1,5 @@
 - content_for :head do
-  = stylesheet_link_tag 'google'
+  = stylesheet_link_tag 'map'
   = javascript_include_tag 'vendor/GeoJSON', 'json-helpers'
   :javascript
     var map;
