--- a/app/views/shared/_includes.mobile.haml
+++ b/app/views/shared/_includes.mobile.haml
@@ -1,5 +1,6 @@
 = stylesheet_link_tag 'http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css'
 = javascript_include_tag :defaults
+= javascript_include_tag "vendor/web-socket-js/swfobject", "vendor/web-socket-js/FABridge", "vendor/web-socket-js/web_socket"
 
 :javascript
   $(document).bind("mobileinit", function(){
