--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -5,6 +5,15 @@
   color:  #444;
 }
 
+#map_canvas.fullscreen {
+  top: 0;
+  right: 0;
+  z-index: 9999;
+  position: fixed!important;
+  width: 100%;
+  height: 100%;
+}
+
 .mobile_map {
   height: 200px;
 }
