--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -13,22 +13,16 @@
 
       // Set CSS for the control border
       var controlUI = document.createElement('DIV');
-      controlUI.style.backgroundColor = 'white';
-      controlUI.style.borderStyle = 'solid';
-      controlUI.style.borderWidth = '2px';
       controlUI.style.cursor = 'pointer';
       controlUI.style.textAlign = 'center';
       controlUI.title = 'Toggle fullscreen.';
       controlDiv.appendChild(controlUI);
 
-      // Set CSS for the control interior
-      var controlText = document.createElement('DIV');
-      controlText.style.fontFamily = 'Arial,sans-serif';
-      controlText.style.fontSize = '12px';
-      controlText.style.paddingLeft = '4px';
-      controlText.style.paddingRight = '4px';
-      controlText.innerHTML = 'Toggle fullscreen';
-      controlUI.appendChild(controlText);
+      var fullscreenIcon = document.createElement('IMG');
+      fullscreenIcon.src = '/images/icons/fullscreen.png';
+      fullscreenIcon.style.paddingLeft = '29px';
+
+      controlUI.appendChild(fullscreenIcon);
 
       // Setup the click event listeners: simply set the map to Chicago
       google.maps.event.addDomListener(controlUI, 'click', function() {
