--- a/app/views/shared/_includes.html.haml
+++ b/app/views/shared/_includes.html.haml
@@ -1,4 +1,5 @@
 = stylesheet_link_tag 'application', 'scaffold'
+= stylesheet_link_tag 'print', :media => 'print'
 = javascript_include_tag :defaults
 / socket-io TODO: move to jammit vendor
 = javascript_include_tag "vendor/web-socket-js/swfobject", "vendor/web-socket-js/FABridge", "vendor/web-socket-js/web_socket"
