seed data for sectors, partners. added sector select form

--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -26,5 +26,15 @@
     = f.label :end_date
     %br
     = f.date_select :end_date
+  .field
+    = f.label :partners
+    %br
+    = select_tag :partners, options_from_collection_for_select(Partner.all, "id", "name"), :multiple=>true
+
+  .field
+    = f.label :sectors
+    %br
+    = select_tag :sectors, options_from_collection_for_select(Sector.all, "id", "name"), :multiple=>true
+
   .actions
     = f.submit 'Save'
