Fixed hoptoad js notifier.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %meta{:charset => 'utf-8'}
     %title Project
+    = hoptoad_javascript_notifier
     = render :partial => 'shared/includes'
     = render :partial => 'shared/locale_links'
     = yield :head
