Started adding sectors and partners.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,10 @@
   %body
     #header
       = yield :header
+    #nav
+      %ul
+        %li=link_to 'Projects', projects_url
+        %li=link_to 'Sectors', sectors_url
+        %li=link_to 'Partners', partners_url
     %p#notice= notice
     = yield
