--- a/app/views/layouts/application.mobile.haml
+++ b/app/views/layouts/application.mobile.haml
@@ -11,5 +11,5 @@
     = yield :head
 
   %body
-    %div{"data-role" => 'page', :style => "width:100%; height:100%"}
+    %div{"data-role" => 'page', :style => "width:100%; height:100%", :class => 'parent'}
       = yield
