--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -94,14 +94,15 @@
 
   })  // document read
 
-%h1 New event
+%h1
+  = t(:new_event)
 
 #map_canvas
 %br
-=link_to "Use Current Location", nil, :class => 'use_current_location'
+=link_to t(:use_current_location), nil, :class => 'use_current_location'
 
 = render 'form'
 
-= link_to raw("&larr; Back to Current Project (#{@project.title})"), project_path(@project)
+= link_to raw("&larr; #{t(:back_to_current_project)} (#{@project.title})"), project_path(@project)
 %br
-= link_to raw('&larr; Back to Projects'), projects_path
+= link_to raw("&larr; #{t(:back_to_projects)}"), projects_path
