--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -4,4 +4,4 @@
   = render project.events
 
   %p.addlink
-    = link_to 'Add a new event', new_project_event_path(project)
+    = link_to t(:add_a_new_event), new_project_event_path(project)
