--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,6 +1,6 @@
 %header
   %p= t :projects
 
-.addlink= link_to "Create a New Project", new_project_path
+.addlink= link_to t(:create_a_new_project), new_project_path
 
 = render @projects
