--- a/app/views/projects/edit.mobile.haml
+++ b/app/views/projects/edit.mobile.haml
@@ -1,7 +1,8 @@
 %div{ 'data-role' => 'header', 'data-position' => 'fixed' }
-  = link_to 'Back', projects_path, :rel => 'external', 'data-icon' => 'delete'
-  %h1 Editing project
-  = link_to 'Save', '#', :rel => 'external', 'data-icon' => 'check', :id => 'save_button'
+  = link_to t(:back), projects_path, :rel => 'external', 'data-icon' => 'delete'
+  %h1
+    = t(:editing_project)
+  = link_to t(:save), '#', :rel => 'external', 'data-icon' => 'check', :id => 'save_button'
   
 %div{ 'data-role' => 'content' }
   = render 'form'
