--- a/app/views/shared/_includes.mobile.haml
+++ b/app/views/shared/_includes.mobile.haml
@@ -1,52 +1,13 @@
 = stylesheet_link_tag 'http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css'
 = javascript_include_tag :defaults
 = javascript_include_tag "vendor/web-socket-js/swfobject", "vendor/web-socket-js/FABridge", "vendor/web-socket-js/web_socket"
+= render 'js/websocket_js'
 
 :javascript
   $(document).bind("mobileinit", function(){
     $.extend(  $.mobile , {
       ajaxFormsEnabled : false
     });
-  });
-
-/ TODO: this is shared with web interface
-:javascript
-  // Set URL of your WebSocketMain.swf here:
-  WEB_SOCKET_SWF_LOCATION = "/javascripts/vendor/web-socket-js/WebSocketMain.swf";
-  // Set this to dump debug message from Flash to console.log:
-  WEB_SOCKET_DEBUG = true;
-  WEB_SOCKET_SUPPORTED = true;
-
-  // Everything below is the same as using standard WebSocket.
-
-  var ws;
-
-  function initWebsocket() {
-
-    // Connect to Web Socket.
-    // Change host/port here to your own Web Socket server.
-    try{
-      ws = new WebSocket("ws://#{WebsocketConfig[:socket_host]}:#{WebsocketConfig[:socket_port]}/");
-
-      // Set event handlers.
-      ws.onopen = function() {
-        console.log("onopen");
-      };
-      ws.onclose = function() {
-        console.log("onclose");
-      };
-      ws.onerror = function() {
-        console.log("onerror");
-      };
-    }
-    catch(err){
-      ws = null;
-      WEB_SOCKET_SUPPORTED = false;
-    }
-  }
-
-  $(document).ready(function() {
-    initWebsocket();
   });
 
 = javascript_include_tag 'http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js'
